cmake_minimum_required (VERSION 3.7)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)
PROJECT(booot-syzygy)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

FILE(GLOB SRCFILES ${PROJECT_SOURCE_DIR}/*.cpp)
FILE(GLOB HDRFILES ${PROJECT_SOURCE_DIR}/*.h)

IF (DEFINED _BTYPE)
    ADD_DEFINITIONS(-D_BTYPE=${_BTYPE})
    IF (UNIX)
        IF (_BTYPE STREQUAL "1")
            SET(CMAKE_CXX_FLAGS "-mbmi2 ${CMAKE_CXX_FLAGS}")
        ENDIF()
    ENDIF()
ENDIF()

IF (CMAKE_C_COMPILER_ID STREQUAL "GNU")
    SET(CMAKE_C_FLAGS "-std=gnu99 ${CMAKE_C_FLAGS}")
ENDIF ()

IF (MSVC)
    SET(CMAKE_CXX_FLAGS_DEBUG "/MTd /Zi /Ob0 /Od /RTC1")
    SET(CMAKE_CXX_FLAGS_RELEASE "/MT /O2 /Ob2 /Oi /Ot /Oy /GL /GS- /DNDEBUG")
ENDIF (MSVC)

IF (UNIX)
    ADD_DEFINITIONS(-DNDEBUG)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -O3 -march=native -flto -pthread -mavx2")
ENDIF (UNIX)

ADD_EXECUTABLE(booot-syzygy ${SRCFILES} ${HDRFILES})
